# codex-threads

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  release.yml
docs/superpowers/plans/: 2026-04-12-codex-threads-implementation.md
docs/superpowers/specs/: 2026-04-12-codex-threads-design.md  2026-04-12-codex-threads-homebrew-dispatch-design.md
scripts/: install.sh  release_notes.py
scripts/tests/: test_release_notes.py
src/: cli.rs  experimental.rs  lib.rs  main.rs  output.rs  query.rs
src/app_state/: mod.rs  restore.rs  types.rs
src/commands/: doctor.rs  experimental.rs  mod.rs  read.rs  search.rs  sync.rs
src/index/: mod.rs  progress.rs  schema.rs  search_meta.rs  store.rs  types.rs
src/index/store/: doctor.rs  lock.rs  mod.rs  read.rs  refresh.rs  resume.rs  search.rs  sync.rs
src/parser/: mod.rs  session.rs
tests/: cli_sync.rs  experimental_output.rs  help_output.rs  homebrew_readme.rs  parser_samples.rs  repo_scaffolding.rs  search_and_read.rs  version_output.rs
tests/common/: mod.rs
